Added keycloak lookup and user id check middleware.
