# docs/swagger.json
@@ -19,6 +19,11 @@
     "paths": {
         "/chat/messages": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns messages between two users",
                 "consumes": [
                     "application/json"
@@ -91,6 +96,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Sends a text message",
                 "consumes": [
                     "application/json"
@@ -154,6 +164,11 @@
         },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Search users by a single field (id, email, username)",
                 "consumes": [
                     "application/json"
@@ -204,6 +219,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new user and returns the created object.",
                 "consumes": [
                     "application/json"
@@ -270,16 +290,15 @@
                 "created_at": {
                     "type": "string"
                 },
-                "email": {
+                "id": {
+                    "description": "internal app user ID",
                     "type": "string"
                 },
-                "id": {
+                "keycloak_id": {
+                    "description": "Keycloak sub",
                     "type": "string"
                 },
                 "updated_at": {
-                    "type": "string"
-                },
-                "username": {
                     "type": "string"
                 }
             }
@@ -319,6 +338,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
