# internal/entities/user_search_field.go
@@ -3,6 +3,7 @@ package entities
 type UserSearchField string
 
 const (
+	UserKeycloakFieldID     UserSearchField = "keycloak_id"
 	UserSearchFieldID       UserSearchField = "id"
 	UserSearchFieldEmail    UserSearchField = "email"
 	UserSearchFieldUsername UserSearchField = "username"
@@ -11,6 +12,7 @@ const (
 func ParseUserSearchField(s string) (UserSearchField, bool) {
 	switch s {
 	case string(UserSearchFieldID),
+		string(UserKeycloakFieldID),
 		string(UserSearchFieldEmail),
 		string(UserSearchFieldUsername):
 		return UserSearchField(s), true
